@@ -7,12 +7,23 @@ CURSES_INCLUDES = CUCurses.h
 FRAMEWORK_INCLUDES = CUError.h CUnit.h MyMem.h TestDB.h TestRun.h Util.h
 
 # Default configuration without enabling anything
-INCLUDE_FILES = \
-	${FRAMEWORK_INCLUDES} \
-	${CONSOLE_INCLUDES} \
-	${CURSES_INCLUDES} \
-	${AUTOMATED_INCLUDES} \
-	${BASIC_INCLUDES}
+INCLUDE_FILES = ${FRAMEWORK_INCLUDES}
+
+if ENABLE_BASIC
+INCLUDE_FILES += $(BASIC_INCLUDES)
+endif
+
+if ENABLE_CONSOLE
+INCLUDE_FILES += $(CONSOLE_INCLUDES)
+endif
+
+if ENABLE_AUTOMATED
+INCLUDE_FILES += $(AUTOMATED_INCLUDES)
+endif
+
+if ENABLE_CURSES
+INCLUDE_FILES += $(CURSES_INCLUDES)
+endif
 
 CUnitInclude_HEADERS = ${INCLUDE_FILES}
 
