@@ -1,6 +1,14 @@
-noinst_LIBRARIES = libcunitfmk.a libcunittestfmk.a
+noinst_LTLIBRARIES = libcunitfmk.la
+noinst_LIBRARIES = libcunittestfmk.a
 
-libcunitfmk_a_SOURCES = \
+TEST_DEFINES = -DCUNIT_BUILD_TESTS -DCUNIT_DO_NOT_DEFINE_UNLESS_BUILDING_TESTS -DMEMTRACE
+TEST_INCLUDES = -I../Test
+
+
+%_test.o: %.c
+	$(COMPILE) $(TEST_INCLUDES) $(TEST_DEFINES) -o $@ -c $<
+
+libcunitfmk_la_SOURCES = \
 	CUError.c \
 	MyMem.c \
 	TestDB.c \
@@ -16,20 +24,3 @@ TEST_OBJECTS = \
 
 libcunittestfmk_a_SOURCES =
 libcunittestfmk_a_LIBADD = $(TEST_OBJECTS)
-TEST_DEFINES = -DCUNIT_BUILD_TESTS -DCUNIT_DO_NOT_DEFINE_UNLESS_BUILDING_TESTS -DMEMTRACE
-TEST_INCLUDES = -I../Test
-
-CUError_test.o: CUError.c
-	$(COMPILE) $(TEST_INCLUDES) $(TEST_DEFINES) -o CUError_test.o -c CUError.c
-
-MyMem_test.o: MyMem.c
-	$(COMPILE) $(TEST_INCLUDES) $(TEST_DEFINES) -o MyMem_test.o -c MyMem.c
-
-TestDB_test.o: TestDB.c
-	$(COMPILE) $(TEST_INCLUDES) $(TEST_DEFINES) -o TestDB_test.o -c TestDB.c
-
-TestRun_test.o: TestRun.c
-	$(COMPILE) $(TEST_INCLUDES) $(TEST_DEFINES) -o TestRun_test.o -c TestRun.c
-
-Util_test.o: Util.c
-	$(COMPILE) $(TEST_INCLUDES) $(TEST_DEFINES) -o Util_test.o -c Util.c
